<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_item_youtube" android:title="@string/menu_item_youtube"></item>
    <item android:id="@+id/menu_item_facebook" android:title="@string/menu_item_facebook"></item>
    <item android:id="@+id/menu_item_twitter" android:title="@string/menu_item_twitter"></item>
    <item android:id="@+id/menu_item_google" android:title="@string/menu_item_google"></item>
    <item android:id="@+id/menu_item_zidingyi" android:title="@string/menu_item_zidingyi"></item>
    <item android:id="@+id/menu_item_about" android:title="@string/menu_item_about"></item>
    <item android:id="@+id/menu_item_logout" android:title="@string/menu_item_logout"></item>
    <item android:id="@+id/menu_item_exit" android:title="@string/menu_item_exit"></item>
</menu>
